--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,9 @@
-// dummy content
+{
+  "compilerOptions": {
+    "target": "ES6",
+    "module": "commonjs",
+    "outDir": "dist",
+    "rootDir": "src",
+    "strict": true
+  }
+}
