--- a/package.json
+++ b/package.json
@@ -1,1 +1,12 @@
-// dummy content
+{
+  "name": "firecrawl",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "node dist/index.js",
+    "build": "tsc"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "typescript": "^5.0.0"
+  }
+}
